--- a/src/main/resources/templates/cartitem/cart_list.html
+++ b/src/main/resources/templates/cartitem/cart_list.html
@@ -5,10 +5,12 @@
             <a class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
                 <span class="fs-5 fw-semibold">장바구니</span>
             </a>
-            <div class="formation-item d-flex" style="padding-top:5px;">
-                <div class="p-3 btn btn-sm btn-primary">장바구니</div>
-                <div class="p-3 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">주문</div>
-                <div class="p-3 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">완료</div>
+            <div class="pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom" style="width: 100%;" >
+                <div class="formation-item d-flex" style="padding-top:5px;">
+                    <div class="p-3 btn btn-sm btn-primary">장바구니</div>
+                    <div class="p-3 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">주문</div>
+                    <div class="p-3 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">완료</div>
+                </div>
             </div>
             <div class="top-cartContainer">
                 <div class="form-check" style="padding-top:5px; margin-left:5px;">
