--- a/src/main/resources/templates/wish/wish_list.html
+++ b/src/main/resources/templates/wish/wish_list.html
@@ -1,6 +1,7 @@
 <html layout:decorate="~{layout}">
 <div layout:fragment="content">
     <div class="event-section">
+        <nav th:replace="~{/event/event_layout :: eventSide}"></nav>
         <div class="container p-3">
             <a class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
                 <span class="fs-5 fw-semibold">찜 목록</span>
@@ -72,16 +73,6 @@
                             <!-- 이벤트를 장바구니에 담는 버튼 -->
                             <div class="btn btn-sm btn-outline-secondary">
                                 <a th:href="@{/wish/delete/{wishId}(wishId=${wish.id})}">장바구니 담기</a>
-                            </div>
-                        </td>
-                    </tr>
-                    <!-- 위 반복문 내부에 또다른 반복문으로 Wish 목록(wishList)을 기준으로 반복 -->
-                    <tr th:each="wish : ${wishList}">
-                        <td colspan="3"></td> <!-- 이벤트 정보를 출력하는 칼럼 수에 맞게 빈 칼럼 생성 -->
-                        <td>
-                            <!-- Wish에 대한 삭제 버튼 -->
-                            <div class="btn btn-sm btn-outline-secondary">
-                                <a th:href="@{|/wish/delete/${wish.id}|}">삭제</a>
                             </div>
                         </td>
                     </tr>
