--- a/src/main/resources/static/css/apply/applySellerForm.css
+++ b/src/main/resources/static/css/apply/applySellerForm.css
@@ -1,32 +1,3 @@
-html,
-body {
-  height: 100%;
-}
-
-.form-register {
-  max-width: 500px;
-  padding: 1rem;
-}
-
-.form-register .form-floating:focus-within {
-  z-index: 2;
-}
-
-.form-register input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-
-.form-register input[type="password"] {
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-}
-
-.form-register .form-floating {
-  padding-bottom: 5px;
-}
-
-.form-register .form-introduce {
+.form-member .form-introduce {
   height: 300px;
 }
