--- a/src/main/resources/templates/book/books.html
+++ b/src/main/resources/templates/book/books.html
@@ -25,3 +25,9 @@
     </table>
 </div>
 <a th:href="@{/book/create}" class="btn btn-primary">도서 등록하기</a>
+<a th:href="@{/category/create}" class="btn btn-primary">카테고리 등록하기</a>
+
+<div th:each="category : ${categories}">
+    <div th:text="${category.categoryName}"></div>
+</div>
+
