수수정중 pr전 커밋

--- a/src/main/resources/templates/cartitem/cart_list.html
+++ b/src/main/resources/templates/cartitem/cart_list.html
@@ -72,10 +72,10 @@
                         <td th:text="${event.content}"></td>
                         <td style="align-items:center;">
                             <div class="btn btn-sm btn-outline-secondary">
-                                <a th:href="@{|/wish/delete/${event.id}|}">주문</a>
+                                <a href="/">주문</a>
                             </div>
                             <div class="btn btn-sm btn-outline-secondary">
-                                <a th:href="@{|/cartitem/add/${event.id}|}">삭제</a>
+                                <a href="/">삭제</a>
                             </div>
                         </td>
                     </tr>
