rebate_list_css_fix

--- a/src/main/resources/templates/rebate/rebate_admin.html
+++ b/src/main/resources/templates/rebate/rebate_admin.html
@@ -27,7 +27,7 @@
                     <td>수수료</td>
                     <td> 원</td>
                 </tr>
-                <tr>
+                <tr class="table-dark">
                     <th scope="row" class="fw-bold">합계</th>
                     <td>/  /</td>
                     <td>판매자 정산 금액 합계</td>
