--- a/src/main/resources/templates/rebate/rebate_seller.html
+++ b/src/main/resources/templates/rebate/rebate_seller.html
@@ -4,6 +4,9 @@
     <link rel="stylesheet" type="text/css" href="/css/rebate/rebate_seller.css">
 </head>
 <div layout:fragment="content" class="container">
+    <div class="left-side">
+        <nav th:replace="~{/member/member_layout :: memberSide}"></nav>
+    </div>
     <div class="main-container">
         <div class="head-box">
             <h2>판매자 정산 페이지</h2>
