--- a/src/main/resources/static/css/book/book_list.css
+++ b/src/main/resources/static/css/book/book_list.css
@@ -7,6 +7,7 @@
     max-width: 1200px;
     display: flex;
     justify-content: center;
+    margin-bottom: 20px;
 }
 .category-button-container > span {
     margin-right: 20px;
