--- a/src/main/resources/templates/book/book_list.html
+++ b/src/main/resources/templates/book/book_list.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" type="text/css" href="/css/book/book_list.css">
 </head>
 <div layout:fragment="content" class="container">
-    <div>
+    <div class="">
         <h1 th:if="${categoryName != null}" th:text="${categoryName}"></h1>
     </div>
     <div class="category-button-container">
