--- a/src/main/resources/templates/event/event_list.html
+++ b/src/main/resources/templates/event/event_list.html
@@ -12,7 +12,7 @@
                        class="btn btn-primary btn-sm">작성</a>
                 </div>
                 <div class="album py-5 bg-body-tertiary">
-                    <div class="container">
+                    <div class="event_container">
                         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                             <div class="col" th:each="event : ${eventList}">
                                 <div class="card shadow-sm">
