bookList_title_enhancement/31

--- a/src/main/resources/templates/book/book_list.html
+++ b/src/main/resources/templates/book/book_list.html
@@ -3,8 +3,9 @@
     <link rel="stylesheet" type="text/css" href="/css/book/book_list.css">
 </head>
 <div layout:fragment="content" class="container">
-    <div class="">
+    <div class="ebook-title">
         <h1 th:if="${categoryName != null}" th:text="${categoryName}"></h1>
+        <h1 th:if="${categoryName == null}">EBook</h1>
     </div>
     <div class="category-button-container">
         <span><a th:href="@{/book/bestSeller}" class="btn btn-primary btn-lg">베스트셀러</a></span>
@@ -49,7 +50,8 @@
                                             <span th:text="${book.price}"></span><span>원</span>
                                         </li>
                                         <li>
-                                            <span th:text="${book.price}"></span><span>원</span>
+                                            <!---->
+                                            </span><span>(</span><span th:text="${book.reviewList.size}"></span><span>)</span>
                                         </li>
 
                                     </ul>
@@ -76,5 +78,35 @@
             </tbody>
         </table>
     </div>
+    <div th:if="principal != null ">
+        <div>
+            <a th:if="${member != null and member.isSeller == true}"
+               th:href="@{/book/create}" class="btn btn-success">EBook 등록</a>
+        </div>
+    </div>
+    <div>
+    </div>
+    <!-- 페이징처리 시작 -->
+    <div th:if="${!paging.isEmpty()}">
+        <ul class="pagination justify-content-center">
+            <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
+                <a class="page-link"
+                   th:href="@{|?page=${paging.number-1}|}">
+                    <span>이전</span>
+                </a>
+            </li>
+            <li th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
+                th:classappend="${page == paging.number} ? 'active'"
+                class="page-item">
+                <a th:text="${page}" class="page-link" th:href="@{|?page=${page}|}"></a>
+            </li>
+            <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
+                <a class="page-link" th:href="@{|?page=${paging.number+1}|}">
+                    <span>다음</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <!-- 페이징처리 끝 -->
 </div>
 </html>
