--- a/src/main/resources/static/css/book/book_list.css
+++ b/src/main/resources/static/css/book/book_list.css
@@ -21,5 +21,9 @@ list-style: none;
         padding: 0;
         margin: 0;
 }
+.ebook-title {
+    max-width: 1100px;
+    padding-left: 50px;
+}
 
 
