--- a/src/main/resources/templates/book/book_create_form.html
+++ b/src/main/resources/templates/book/book_create_form.html
@@ -1,23 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>도서 등록</title>
-    <style>
-        /* CSS 스타일은 여기에 작성하십시오. */
-    </style>
-</head>
-<body>
+
+
+
 <form th:action="@{/book/create}" th:object="${bookForm}" method="post" enctype="multipart/form-data">
 
     <!-- 카테고리 선택 드롭다운 -->
     <div class="mb-3">
         <label for="category" class="form-label">카테고리</label>
-        <select th:field="*{category}" class="form-select">
+        <select name="categoryName" id="category" class="form-select" required>
+            <option value="">카테고리를 선택하세요</option>
             <option th:each="category : ${categories}" th:value="${category.categoryName}" th:text="${category.categoryName}">카테고리를 선택하세요</option>
         </select>
     </div>
+
     <!-- 제목 입력 필드 -->
     <div class="mb-3">
         <label for="subject" class="form-label">제목</label>
@@ -71,5 +65,4 @@
     <input type="submit" value="저장하기"  class="btn btn-primary my-2">
 </form>
 
-</body>
-</html>
+
