--- a/src/main/resources/templates/mainhome.html
+++ b/src/main/resources/templates/mainhome.html
@@ -291,8 +291,8 @@
                     <div class="row d-flex align-items-center">
                         <div class="col-md-6">
                             <div class="banner-content">
-                                <h1 class="display-2 text-uppercase text-dark pb-5">책 제목</h1>
-                                <a href="shop.html" class="btn btn-medium btn-dark text-uppercase btn-rounded-none">eBook
+                                <h1 class="display-2 text-uppercase text-dark pb-5">EBook</h1>
+                                <a th:href="@{/book/list}" class="btn btn-medium btn-dark text-uppercase btn-rounded-none">eBook
                                     바로가기</a>
                             </div>
                         </div>
