--- a/src/main/resources/templates/book/book_list.html
+++ b/src/main/resources/templates/book/book_list.html
@@ -1,18 +1,114 @@
-<table class="table">
-    <thead class="table-dark">
-    <tr>
-        <th>번호</th>
-        <th>제목</th>
-        <th>이미지</th> <!-- 새로운 열 추가 -->
-        <th>작성일시</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="book, loop : ${bookList}">
-        <td th:text="${loop.count}"></td>
-        <td>
-            <a th:href="@{|/book/detail/${book.id}|}" th:text="${book.subject}"></a>
-        </td>
-    </tr>
-    </tbody>
-</table>
+<html layout:decorate="~{layout}">
+<head>
+    <link rel="stylesheet" type="text/css" href="/css/book/book_list.css">
+</head>
+<div layout:fragment="content" class="container">
+    <div class="ebook-title">
+        <h1 th:if="${categoryEntity != null}" th:text="${categoryEntity.categoryName}"></h1>
+        <h1 th:if="${categoryEntity == null}">EBook</h1>
+    </div>
+    <div  class="category-button-container" >
+        <span><a th:href="@{/book/list}" class="btn btn-primary btn-lg">EBook</a></span>
+        <span th:if="${categoryList != null}" th:each="category : ${categoryList}"><a th:href="@{|/book/list/${category.categoryName}|}" class="btn btn-primary btn-lg">[[${category.categoryName}]]</a></span>
+    </div>
+
+    <div class="main-container">
+        <table class="table">
+            <thead class="table-dark">
+            <tr>
+                <th>번호</th>
+                <th>이미지</th>
+                <th>책 내용</th> <!-- 새로운 열 추가 -->
+                <th>버튼</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="book, loop : ${paging}">
+                <td th:text="${loop.count}"></td>
+                <td>
+                    <a th:href="@{|/book/detail/${book.id}|}">
+                        <img src="..." class="" alt="..." style="width:150px; height:230px;">
+                    </a>
+                </td>
+                <td>
+                    <table>
+                        <tbody>
+                        <tr>
+                            <td>
+                                <div class="book_content">
+                                    <ul>
+                                        <li>
+                                            <a th:href="@{|/book/detail/${book.id}|}" th:text="${book.subject}"></a>
+                                        </li>
+                                        <li>
+                                            <span th:text="${book.author}"></span>
+                                        </li>
+                                        <li>
+                                            <span th:text="${book.price}"></span><span>원</span>
+                                        </li>
+                                        <li>
+                                            <!---->
+                                            </span><span>(</span><span
+                                                th:text="${book.reviewList.size}"></span><span>)</span>
+                                        </li>
+
+                                    </ul>
+                                </div>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </td>
+                <td>
+                    <ul>
+                        <li>
+                            <button>장바구니 버튼</button>
+                        </li>
+                        <li>
+                            <button>찜 버튼</button>
+                        </li>
+                        <li>
+                            <button>결제 버튼</button>
+                        </li>
+                    </ul>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div th:if="principal != null" class="create-button-container">
+        <div>
+            <a th:if="${member != null and member.isSeller == true}"
+               th:href="@{/book/create}" class="btn btn-success">EBook 등록</a>
+            <span sec:authorize="hasRole('ADMIN')">
+                <a th:href="@{/book/create}" class="btn btn-success">EBook 등록</a>
+                <a th:href="@{/category/create}" class="btn btn-success">카테고리 생성</a>
+            </span>
+        </div>
+    </div>
+    <div>
+    </div>
+    <!-- 페이징처리 시작 -->
+    <div th:if="${!paging.isEmpty()}">
+        <ul class="pagination justify-content-center">
+            <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
+                <a class="page-link"
+                   th:href="@{|?page=${paging.number-1}|}">
+                    <span>이전</span>
+                </a>
+            </li>
+            <li th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
+                th:classappend="${page == paging.number} ? 'active'"
+                class="page-item">
+                <a th:text="${page}" class="page-link" th:href="@{|?page=${page}|}"></a>
+            </li>
+            <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
+                <a class="page-link" th:href="@{|?page=${paging.number+1}|}">
+                    <span>다음</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <!-- 페이징처리 끝 -->
+</div>
+</html>
