--- a/src/main/resources/templates/book/book_detail.html
+++ b/src/main/resources/templates/book/book_detail.html
@@ -78,10 +78,12 @@
                         </div>
                     </div>
             </div>
-            <div class="formation-item d-flex" style="padding-top:5px;">
-                기본 정보 : 책분류
-                기본 정보 : ISBN
-                기타 등등
+            <div class="book_info">
+                <div class="formation-item d-flex" style="padding-top:5px;">
+                    기본 정보 : 책분류
+                    기본 정보 : ISBN
+                    기타 등등
+                </div>
             </div>
             <div class="book_bottom-section">
                 <div class="formation-item d-flex" style="padding-top:5px;">
