--- a/src/main/resources/static/css/book/book_detail.css
+++ b/src/main/resources/static/css/book/book_detail.css
@@ -37,7 +37,7 @@
 .book_bottom-section {
     border: 1px solid blue;
     width: auto;
-    height: 400px;
+    height: 900px;
 }
 
 .book_navbar {
@@ -51,5 +51,7 @@
     align-self: center;
     text-align: center;
 }
-
+.book_info {
+    height: 1000px;
+}
 
