--- a/src/main/resources/templates/book/book_create_form.html
+++ b/src/main/resources/templates/book/book_create_form.html
@@ -1,6 +1,5 @@
-
-
-
+<html layout:decorate="~{layout}">
+<div layout:fragment="content">
 <form th:action="@{/book/create}" th:object="${bookForm}" method="post" enctype="multipart/form-data">
 
     <!-- 카테고리 선택 드롭다운 -->
@@ -64,5 +63,6 @@
     <!-- 도서 등록 버튼 -->
     <input type="submit" value="저장하기"  class="btn btn-primary my-2">
 </form>
-
+</div>
+</html>
 
